# crochet-pattern-generator

./: .gitignore  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  build.sh  package-lock.json
docs/: index.html
docs/assets/: index-BPaEoG4o.js  index-BW4RYPZu.js  index-BfSUIlw_.js  index-CL8B0Lqv.js  index-Cf2U7Uf1.js  index-D_09Jdin.js  index-DzTL-mGR.css  index-ZR-5uxDf.js  pattern-worker-BRAZoUsQ.js  pattern-worker-CpGHZtlw.js  pattern-worker-CvSHYFdj.js  pattern-worker-DD0n7hA7.js  pattern-worker-DpQixQsJ.js  pattern-worker-DwtYmFor.js
docs/wasm/: crochet_wasm.d.ts  crochet_wasm.js  crochet_wasm_bg.wasm  crochet_wasm_bg.wasm.d.ts  package.json
frontend/: .gitignore  ABSOLUTE_VERIFICATION.md  CHANGES.md  EXPECTED_BEHAVIOR.md  EXTRACT_FIRST.md  README.md  WASM_INTEGRATION.md  WASM_PACKAGE_NAME.md  WEB_WORKER.md  WEB_WORKER_ENABLED.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConfigurationPanel.tsx  DrawingCanvas.tsx  ExportPanel.tsx  PatternPreview.tsx
frontend/src/context/: AppContext.tsx  ConfigContext.tsx
wasm/: .gitignore  BUILD.md  Cargo.toml  IMPLEMENTATIONS.md  INTEGRATION.md  README.md  WASM_SUMMARY.md  build-wasm.sh
wasm/.cargo/: config.toml
wasm/benches/: mesh_processing.rs  pattern_generation.rs
wasm/crochet-core/: Cargo.toml
wasm/crochet-core/src/: generator.rs  lib.rs  optimization.rs  radius.rs  row_mapping.rs  sampling.rs  stitch_count.rs
wasm/crochet-types/: Cargo.toml
wasm/crochet-types/src/: lib.rs
wasm/crochet-wasm/: Cargo.toml
wasm/crochet-wasm/src/: lib.rs
wasm/src/: bindings.rs  lib.rs  utils.rs
wasm/src/algorithms/: curvature.rs  geodesic.rs  mod.rs  voronoi.rs
wasm/src/instruction/: abbreviations.rs  diagram.rs  formatter.rs  generator.rs  mod.rs
wasm/src/loader/: gltf_parser.rs  mod.rs  validation.rs
wasm/src/mesh/: analysis.rs  mod.rs  processing.rs  simplification.rs  types.rs
wasm/src/parameterization/: abf.rs  distortion.rs  lscm.rs  mod.rs  seam_placement.rs
wasm/src/pattern/: amigurumi.rs  mod.rs  optimizer.rs  row_grouping.rs  types.rs
wasm/src/stitch/: connectivity.rs  grid_generator.rs  mod.rs  placement_optimizer.rs  type_classifier.rs
wasm/tests/integration/: parameterization_tests.rs  pattern_validation_tests.rs  stitch_generation_tests.rs
wasm/tests/unit/: algorithm_tests.rs  instruction_tests.rs  mesh_tests.rs
(+49 files in other folders)
