[package]
name = "crochet-pattern-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "WASM module for converting 3D meshes to crochet patterns"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Math and linear algebra
nalgebra = "0.32"
glam = { version = "0.24", features = ["serde"] }

# GLTF parsing
gltf = { version = "1.4", features = ["utils"] }

# Geometric algorithms
spade = "2.7"  # Delaunay triangulation, Voronoi
geo = "0.27"   # Geometric primitives

# Sparse linear algebra for LSCM
nalgebra-sparse = "0.9"

# Console logging - MARK AS OPTIONAL
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"

# Parallel processing (note: limited in WASM, but useful for native tests)
rayon = { version = "1.8", optional = true }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
approx = "0.5"
criterion = "0.5"

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

[[bench]]
name = "mesh_processing"
harness = false

[[bench]]
name = "pattern_generation"
harness = false
