[workspace]
members = [
    "crochet-types",
    "crochet-core",
    "crochet-wasm",
]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip debug symbols
panic = "abort"     # Smaller panic handler
